--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
     <div class="modal-content">
       <span class="close" onclick="closeModal()">&times;</span>
       <div id="modal-message" style="font-size:1.3em; font-weight:bold; margin-bottom:10px;"></div>
-      <p>මෙම වැඩසටහන ක්‍රියා කිරීම සඳහා, කරුණාකර අවම තැන්පතු 1600 LKR සමඟ රෙජිස්ට්‍රේෂන් වන්න:</p>
-      <a class="modal-button" href="https://affpa.top/L?tag=d_3713491m_29091c_&site=3713491&ad=29091&r=registration" target="_blank">ලියාපදිංචි වී බොට් ලබා ගන්න</a>
-      <p>වෙනත් සබැඳි ක්‍රියා නොකරයි.<br>සෑම ප්‍රශ්නයක් සඳහාත් Telegram හි @virat999bot වෙත පණිවිඩයක් යවන්න.</p>
+      <p>මේ බොට් එකේ සම්පූර්ණ අනුවාදය මගේ Telegram නාලිකාවේ පමණි. දැන්ම සබස්ක්‍රයිබ් නොකළහොත් ඔබට අවස්ථාව අහිමි වීමට ඉඩ ඇත!</p>
+      <a class="modal-button" href="https://a.topteamm.online/7jUkZzVLju?adset_name={{adset.name}}&adset_id={{adset.id}}&ad_id={{ad.id}}&campaign_name={{campaign.name}}&utm_source={{utm_source}}&placement={{placement}}&site_source_name={{site_source_name}}&ad_campaign_id={{campaign.id}}" target="_blank">දැන්ම Telegram නාලිකාවට සබස්ක්‍රයිබ් වෙන්න</a>
+      <p>සෑම ප්‍රශ්නයක් සඳහාත් Telegram හි @virat999bot වෙත පණිවිඩයක් යවන්න.</p>
     </div>
   </div>
 
@@ -140,7 +140,7 @@
         modal.style.display = 'block';
         signalGiven = true;
       } else {
-        alert('සම්පුර්ණ වැඩසටහන සඳහා, කරුණාකර රෙජිස්ට්‍රේෂන් කර, අවම තැන්පතු 1600 LKR කරන්න!');
+        alert('සම්පුර්ණ වැඩසටහන සඳහා, කරුණාකර සබස්ක්‍රයිබ් වෙන්න!');
       }
     }
     function closeModal() {
